--- a/radio/ラジオ禅/index.html
+++ b/radio/ラジオ禅/index.html
@@ -24,8 +24,9 @@
     <img id="radio-logo" src="https://i.ibb.co/GJrfGfs/radio-zen.png">
     <div id="radio-data">
         <div id="radio-data-text">
-
-            <h1>ラジオ禅</h1>
+            <div id="radio-name-container">
+                <h1>ラジオ禅</h1>
+            </div>
             <ul>
                 <li>City Pop</li>
                 <li>Język Japoński</li>
@@ -60,6 +61,11 @@
       </a>
     </main>
     <script>
+
+        let radio_station_name = document.querySelector(".radio-player-container #radio-player #radio-data #radio-data-text h1").innerHTML;
+        radio_station_name = `${radio_station_name} ${radio_station_name} ${radio_station_name} ${radio_station_name} ${radio_station_name} ${radio_station_name}`;
+        document.querySelector(".radio-player-container #radio-player #radio-data #radio-data-text h1").innerHTML = radio_station_name;
+        console.log(radio_station_name);
         
         var audio = new Audio("https://www.googleapis.com/drive/v3/files/1yZuOlR4XsLKiX9kfS3E9tP2BD8-osO-I?alt=media&key=AIzaSyD76lmULeKKVQ3IcgTOTrozZzjnIaeRe00");
         var toggleButton = document.getElementById("toggle-button");
