--- a/radio/index.html
+++ b/radio/index.html
@@ -34,107 +34,109 @@
     </div>
     <div id="radio-list">
         <h1 id="radio-list-heading">Wszystkie stacje radiowe</h1>
-        <ul id="Pampersia">
-            <a href="https://grumqy.github.io/fangea/radio/radio_republika/">
-                <li>
-                    <img src="https://i.ibb.co/KNT8xY0/tvradio.png">
-                    <span>Radio Republika</span>
-                </li>  
-            </a>
-            <a href="https://grumqy.github.io/fangea/radio/sigma_radio/">
-                <li>
-                    <img src="https://i.ibb.co/N2PRMdJ/sigma-radioo.png">
-                    <span>Sigma Radio</span>
-                </li>  
-            </a>
-            <a href="https://grumqy.github.io/fangea/radio/music_pop/">
-                <li>
-                    <img src="https://i.ibb.co/tMdvKpQ/musiccpop.png">
-                    <span>Music Pop</span>
-                </li>  
-            </a>
-            <a href="https://grumqy.github.io/fangea/radio/boomer_hits/">
-                <li>
-                    <img src="https://i.ibb.co/ncGF0Hb/boomer-hits.png">
-                    <span>Boomer Hits</span>
-                </li>  
-            </a>
-            <a href="https://grumqy.github.io/fangea/radio/downtown_fm/">
-                <li>
-                    <img src="https://i.ibb.co/ZzTCvXH/downntown.png">
-                    <span>Downtown FM</span>
-                </li>  
-            </a>
-            <a href="https://grumqy.github.io/fangea/radio/metal_radio/">
-                <li>
-                    <img src="https://i.ibb.co/Dw6yB0d/metal-radioo.png">
-                    <span>Metal Radio</span>
-                </li>  
-            </a>
-        </ul>
-        <ul id="Nadmorze">
-            <a href="https://grumqy.github.io/fangea/radio/rn_radio/">
-                <li>
-                    <img src="https://i.ibb.co/rbWQsBG/rnradio.png">
-                    <span>RN Radio</span>
-                </li>  
-            </a>
-            <a href="https://grumqy.github.io/fangea/radio/ラジオ禅/">
-                <li>
-                    <img src="https://i.ibb.co/GJrfGfs/radio-zen.png">
-                    <span>ラジオ禅</span>
-                </li>  
-            </a>
-            <a href="https://grumqy.github.io/fangea/radio/みどり_fm/">
-                <li>
-                    <img src="https://i.ibb.co/db8fWq5/radio-makronezja.png">
-                    <span>みどりFM</span>
-                </li>  
-            </a>
-        </ul>
-        <ul id="Sudfangea">
-            <a href="https://grumqy.github.io/fangea/radio/wild_west_radio/">
-                <li>
-                    <img src="https://i.ibb.co/55Y2NLy/wildwestradio.png">
-                    <span>Wild West Radio</span>
-                </li>  
-            </a>
-            <a href="https://grumqy.github.io/fangea/radio/willington_non_stop_rock/">
-                <li>
-                    <img src="https://i.ibb.co/fXg1RZP/image.png">
-                    <span>Willington Non-Stop Rock</span>
-                </li>  
-            </a>
-        </ul>
-        <ul id="Montecydja">
-            <a href="https://grumqy.github.io/fangea/radio/mega_music/">
-                <li>
-                    <img src="https://i.ibb.co/d6rqvNT/mega-music.png">
-                    <span>Mega Music</span>
-                </li>  
-            </a>
-            <a href="https://grumqy.github.io/fangea/radio/pop_24/">
-                <li>
-                    <img src="https://i.ibb.co/Jrrk1Dr/pop24.png">
-                    <span>Pop 24</span>
-                </li>  
-            </a>
-        </ul>
-        <ul id="Iznotia">
-            <a href="https://grumqy.github.io/fangea/radio/radio_pregolau_international/">
-                <li>
-                    <img src="https://i.ibb.co/5v1qTqW/radio-pregolau.png">
-                    <span>Radio Pregolau International</span>
-                </li>  
-            </a>
-        </ul>
-        <ul id="Pieczaria">
-            <a href="https://grumqy.github.io/fangea/radio/pieczar_radio/">
-                <li>
-                    <img src="https://i.ibb.co/mJqCmL1/pieczar-radio.png">
-                    <span>Pieczar Radio</span>
-                </li>  
-            </a>
+        <ul>
+            <div id="Pampersia">
+                <a href="https://grumqy.github.io/fangea/radio/radio_republika/">
+                    <li>
+                        <img src="https://i.ibb.co/KNT8xY0/tvradio.png">
+                        <span>Radio Republika</span>
+                    </li>  
+                </a>
+                <a href="https://grumqy.github.io/fangea/radio/sigma_radio/">
+                    <li>
+                        <img src="https://i.ibb.co/N2PRMdJ/sigma-radioo.png">
+                        <span>Sigma Radio</span>
+                    </li>  
+                </a>
+                <a href="https://grumqy.github.io/fangea/radio/music_pop/">
+                    <li>
+                        <img src="https://i.ibb.co/tMdvKpQ/musiccpop.png">
+                        <span>Music Pop</span>
+                    </li>  
+                </a>
+                <a href="https://grumqy.github.io/fangea/radio/boomer_hits/">
+                    <li>
+                        <img src="https://i.ibb.co/ncGF0Hb/boomer-hits.png">
+                        <span>Boomer Hits</span>
+                    </li>  
+                </a>
+                <a href="https://grumqy.github.io/fangea/radio/downtown_fm/">
+                    <li>
+                        <img src="https://i.ibb.co/ZzTCvXH/downntown.png">
+                        <span>Downtown FM</span>
+                    </li>  
+                </a>
+                <a href="https://grumqy.github.io/fangea/radio/metal_radio/">
+                    <li>
+                        <img src="https://i.ibb.co/Dw6yB0d/metal-radioo.png">
+                        <span>Metal Radio</span>
+                    </li>  
+                </a>
+            </div>
+            <div id="Nadmorze">
+                <a href="https://grumqy.github.io/fangea/radio/rn_radio/">
+                    <li>
+                        <img src="https://i.ibb.co/rbWQsBG/rnradio.png">
+                        <span>RN Radio</span>
+                    </li>  
+                </a>
+                <a href="https://grumqy.github.io/fangea/radio/ラジオ禅/">
+                    <li>
+                        <img src="https://i.ibb.co/GJrfGfs/radio-zen.png">
+                        <span>ラジオ禅</span>
+                     </li>  
+                </a>
+                <a href="https://grumqy.github.io/fangea/radio/みどり_fm/">
+                    <li>
+                        <img src="https://i.ibb.co/db8fWq5/radio-makronezja.png">
+                        <span>みどりFM</span>
+                    </li>  
+                </a>
+            </div>
+            <div id="Sudfangea">
+                <a href="https://grumqy.github.io/fangea/radio/wild_west_radio/">
+                    <li>
+                        <img src="https://i.ibb.co/55Y2NLy/wildwestradio.png">
+                        <span>Wild West Radio</span>
+                    </li>  
+                </a>
+                <a href="https://grumqy.github.io/fangea/radio/willington_non_stop_rock/">
+                    <li>
+                        <img src="https://i.ibb.co/fXg1RZP/image.png">
+                        <span>Willington Non-Stop Rock</span>
+                    </li>  
+                </a>
+            </div>
+            <div id="Montecydja">
+                <a href="https://grumqy.github.io/fangea/radio/mega_music/">
+                    <li>
+                        <img src="https://i.ibb.co/d6rqvNT/mega-music.png">
+                        <span>Mega Music</span>
+                    </li>  
+                </a>
+                <a href="https://grumqy.github.io/fangea/radio/pop_24/">
+                    <li>
+                        <img src="https://i.ibb.co/Jrrk1Dr/pop24.png">
+                        <span>Pop 24</span>
+                    </li>  
+                </a>
+            </div>
+            <div id="Iznotia">
+                <a href="https://grumqy.github.io/fangea/radio/radio_pregolau_international/">
+                    <li>
+                        <img src="https://i.ibb.co/5v1qTqW/radio-pregolau.png">
+                        <span>Radio Pregolau International</span>
+                    </li>  
+                </a>
+            </div>
+            <div id="Pieczaria">
+                <a href="https://grumqy.github.io/fangea/radio/pieczar_radio/">
+                    <li>
+                        <img src="https://i.ibb.co/mJqCmL1/pieczar-radio.png">
+                        <span>Pieczar Radio</span>
+                    </li>  
+                </a>
+            </div>
         </ul>
     </div>
     </main>
