--- a/radio/boomer_hits/index.html
+++ b/radio/boomer_hits/index.html
@@ -25,7 +25,7 @@
     <div id="radio-data">
         <div id="radio-data-text">
             <div id="radio-name-container">
-                <h1>Boomer Hits    </h1>
+                <h1>Boomer Hits⠀⠀⠀</h1>
             </div>
             <ul>
                 <li>Pop</li>
