--- a/radio/downtown_fm/index.html
+++ b/radio/downtown_fm/index.html
@@ -25,7 +25,7 @@
     <div id="radio-data">
         <div id="radio-data-text">
             <div id="radio-name-container">
-                <h1>Downtown FM</h1>
+                <h1>Downtown FM⠀⠀⠀</h1>
             </div>
             <ul>
                 <li>Hip-Hop</li>
