--- a/radio/mega_music/index.html
+++ b/radio/mega_music/index.html
@@ -25,7 +25,7 @@
     <div id="radio-data">
         <div id="radio-data-text">
             <div id="radio-name-container">
-                <h1>Mega Music</h1>
+                <h1>Mega Music⠀⠀⠀</h1>
             </div>
             <ul>
                 <li>Phonk</li>
