--- a/radio/music_pop/index.html
+++ b/radio/music_pop/index.html
@@ -25,7 +25,7 @@
     <div id="radio-data">
         <div id="radio-data-text">
             <div id="radio-name-container">
-                <h1>Music Pop</h1>
+                <h1>Music Pop⠀⠀⠀</h1>
             </div>
             <ul>
                 <li>Pop</li>
