--- a/radio/pieczar_radio/index.html
+++ b/radio/pieczar_radio/index.html
@@ -25,7 +25,7 @@
     <div id="radio-data">
         <div id="radio-data-text">
             <div id="radio-name-container">
-                <h1>Pieczar Radio</h1>
+                <h1>Pieczar Radio⠀⠀⠀</h1>
             </div>
             <ul>
                 <li>Sraczucha</li>
