--- a/radio/pop_24/index.html
+++ b/radio/pop_24/index.html
@@ -25,7 +25,7 @@
     <div id="radio-data">
         <div id="radio-data-text">
             <div id="radio-name-container">
-                <h1>Pop 24</h1>
+                <h1>Pop 24⠀⠀⠀</h1>
             </div>
             <ul>
                 <li>Pop</li>
