--- a/radio/radio_republika/index.html
+++ b/radio/radio_republika/index.html
@@ -25,7 +25,7 @@
     <div id="radio-data">
         <div id="radio-data-text">
             <div id="radio-name-container">
-                <h1>Radio Republika</h1>
+                <h1>Radio Republika⠀⠀⠀</h1>
             </div>
             <ul>
                 <li>Muzyka Filmowa</li>
