--- a/radio/sigma_radio/index.html
+++ b/radio/sigma_radio/index.html
@@ -25,7 +25,7 @@
     <div id="radio-data">
         <div id="radio-data-text">
             <div id="radio-name-container">
-                <h1>Sigma Radio</h1>
+                <h1>Sigma Radio⠀⠀⠀</h1>
             </div>
             <ul>
                 <li>Electro</li>
