--- a/radio/wild_west_radio/index.html
+++ b/radio/wild_west_radio/index.html
@@ -25,7 +25,7 @@
     <div id="radio-data">
         <div id="radio-data-text">
             <div id="radio-name-container">
-                <h1>Wild West Radio</h1>
+                <h1>Wild West Radio⠀⠀⠀</h1>
             </div>
             <ul>
                 <li>R&B</li>
