--- a/radio/みどり_fm/index.html
+++ b/radio/みどり_fm/index.html
@@ -25,7 +25,7 @@
     <div id="radio-data">
         <div id="radio-data-text">
             <div id="radio-name-container">
-                <h1>みどりFM</h1>
+                <h1>みどりFM⠀⠀⠀</h1>
             </div>
             <ul>
                 <li>Lo-fi</li>
