--- a/radio/ラジオ禅/index.html
+++ b/radio/ラジオ禅/index.html
@@ -25,7 +25,7 @@
     <div id="radio-data">
         <div id="radio-data-text">
             <div id="radio-name-container">
-                <h1>ラジオ禅</h1>
+                <h1>ラジオ禅⠀⠀⠀</h1>
             </div>
             <ul>
                 <li>City Pop</li>
