--- a/radio/index.html
+++ b/radio/index.html
@@ -24,12 +24,13 @@
     <div>Filtruj wg lokalizacji</div>
     <ul>
         <button onclick="radio_filter('all');"><li>Wszystko</li></button>
-        <button onclick="radio_filter('Pampersia');"><li>Pampersia</li></button>
-        <button onclick="radio_filter('Nadmorze');"><li>Nadmorze</li></button>
-        <button onclick="radio_filter('Sudfangea');"><li>Sudfangea</li></button>
-        <button onclick="radio_filter('Montecydja');"><li>Montecydja</li></button>
-        <button onclick="radio_filter('Iznotia');"><li>Iznotia</li></button>
-        <button onclick="radio_filter('Pieczaria');"><li>Pieczaria</li></button>
+        <button onclick="radio_filter('Pampersia');"><li><img src="https://i.ibb.co/27WybfV/1160351671839379497.webp">Pampersia</li></button>
+        <button onclick="radio_filter('Nadmorze');"><li><img src="https://i.ibb.co/BrzkQ4q/1187527487702450299.webp">Nadmorze</li></button>
+        <button onclick="radio_filter('Sudfangea');"><li><img src="https://i.ibb.co/pwhcqsT/1241709227207037021.webp">Sudfangea</li></button>
+        <button onclick="radio_filter('Montecydja');"><li><img src="https://i.ibb.co/jrY6hYR/1229166542655193190.webp">Montecydja</li></button>
+        <button onclick="radio_filter('Iznotia');"><li><img src="https://i.ibb.co/PNH57Dt/1160351653099212881.webp">Iznotia</li></button>
+        <button onclick="radio_filter('Pieczaria');"><li><img src="https://i.ibb.co/Q8HVycp/1186418659569180693.webp">Pieczaria</li></button>
+        <button onclick="radio_filter('Halandia');"><li><img src="https://i.ibb.co/d2c3LTm/1243213829115220068.webp">Pieczaria</li></button>
     </ul>
     </div>
     <div id="radio-list">
