--- a/radio/index.html
+++ b/radio/index.html
@@ -30,7 +30,7 @@
         <button onclick="radio_filter('Montecydja');"><li><img src="https://i.ibb.co/jrY6hYR/1229166542655193190.webp">Montecydja</li></button>
         <button onclick="radio_filter('Iznotia');"><li><img src="https://i.ibb.co/PNH57Dt/1160351653099212881.webp">Iznotia</li></button>
         <button onclick="radio_filter('Pieczaria');"><li><img src="https://i.ibb.co/Q8HVycp/1186418659569180693.webp">Pieczaria</li></button>
-        <button onclick="radio_filter('Halandia');"><li><img src="https://i.ibb.co/d2c3LTm/1243213829115220068.webp">Pieczaria</li></button>
+        <button onclick="radio_filter('Halandia');"><li><img src="https://i.ibb.co/d2c3LTm/1243213829115220068.webp">Halandia</li></button>
     </ul>
     </div>
     <div id="radio-list">
