--- a/radio/index.html
+++ b/radio/index.html
@@ -24,19 +24,19 @@
     <div>Filtruj wg lokalizacji</div>
     <ul>
         <button onclick="radio_filter('all');"><li>Wszystko</li></button>
-        <button onclick="radio_filter('Pampersia');"><li><img src="https://i.ibb.co/27WybfV/1160351671839379497.webp">Pampersia</li></button>
-        <button onclick="radio_filter('Nadmorze');"><li><img src="https://i.ibb.co/BrzkQ4q/1187527487702450299.webp">Nadmorze</li></button>
-        <button onclick="radio_filter('Sudfangea');"><li><img src="https://i.ibb.co/pwhcqsT/1241709227207037021.webp">Sudfangea</li></button>
-        <button onclick="radio_filter('Montecydja');"><li><img src="https://i.ibb.co/jrY6hYR/1229166542655193190.webp">Montecydja</li></button>
-        <button onclick="radio_filter('Iznotia');"><li><img src="https://i.ibb.co/PNH57Dt/1160351653099212881.webp">Iznotia</li></button>
-        <button onclick="radio_filter('Pieczaria');"><li><img src="https://i.ibb.co/Q8HVycp/1186418659569180693.webp">Pieczaria</li></button>
-        <button onclick="radio_filter('Halandia');"><li><img src="https://i.ibb.co/d2c3LTm/1243213829115220068.webp">Halandia</li></button>
+        <button onclick="radio_filter('Pampersii');"><li><img src="https://i.ibb.co/27WybfV/1160351671839379497.webp">Pampersia</li></button>
+        <button onclick="radio_filter('Nadmorzu');"><li><img src="https://i.ibb.co/BrzkQ4q/1187527487702450299.webp">Nadmorze</li></button>
+        <button onclick="radio_filter('Sudfangei');"><li><img src="https://i.ibb.co/pwhcqsT/1241709227207037021.webp">Sudfangea</li></button>
+        <button onclick="radio_filter('Montecydji');"><li><img src="https://i.ibb.co/jrY6hYR/1229166542655193190.webp">Montecydja</li></button>
+        <button onclick="radio_filter('Iznotii');"><li><img src="https://i.ibb.co/PNH57Dt/1160351653099212881.webp">Iznotia</li></button>
+        <button onclick="radio_filter('Pieczarii');"><li><img src="https://i.ibb.co/Q8HVycp/1186418659569180693.webp">Pieczaria</li></button>
+        <button onclick="radio_filter('Halandii');"><li><img src="https://i.ibb.co/d2c3LTm/1243213829115220068.webp">Halandia</li></button>
     </ul>
     </div>
     <div id="radio-list">
         <h1 id="radio-list-heading">Wszystkie stacje radiowe</h1>
         <ul>
-            <div id="Pampersia">
+            <div id="Pampersii">
                 <a href="https://grumqy.github.io/fangea/radio/radio_republika/">
                     <li>
                         <img src="https://i.ibb.co/KNT8xY0/tvradio.png">
@@ -74,7 +74,7 @@
                     </li>  
                 </a>
             </div>
-            <div id="Nadmorze">
+            <div id="Nadmorzu">
                 <a href="https://grumqy.github.io/fangea/radio/rn_radio/">
                     <li>
                         <img src="https://i.ibb.co/rbWQsBG/rnradio.png">
@@ -94,7 +94,7 @@
                     </li>  
                 </a>
             </div>
-            <div id="Sudfangea">
+            <div id="Sudfangei">
                 <a href="https://grumqy.github.io/fangea/radio/wild_west_radio/">
                     <li>
                         <img src="https://i.ibb.co/55Y2NLy/wildwestradio.png">
@@ -108,7 +108,7 @@
                     </li>  
                 </a>
             </div>
-            <div id="Montecydja">
+            <div id="Montecydji">
                 <a href="https://grumqy.github.io/fangea/radio/mega_music/">
                     <li>
                         <img src="https://i.ibb.co/d6rqvNT/mega-music.png">
@@ -122,7 +122,7 @@
                     </li>  
                 </a>
             </div>
-            <div id="Iznotia">
+            <div id="Iznotii">
                 <a href="https://grumqy.github.io/fangea/radio/radio_pregolau_international/">
                     <li>
                         <img src="https://i.ibb.co/5v1qTqW/radio-pregolau.png">
@@ -130,7 +130,7 @@
                     </li>  
                 </a>
             </div>
-            <div id="Pieczaria">
+            <div id="Pieczarii">
                 <a href="https://grumqy.github.io/fangea/radio/pieczar_radio/">
                     <li>
                         <img src="https://i.ibb.co/mJqCmL1/pieczar-radio.png">
