--- a/radio/index.html
+++ b/radio/index.html
@@ -138,6 +138,14 @@
                     </li>  
                 </a>
             </div>
+            <div id="Halandii">
+                <a href="https://grumqy.github.io/fangea/radio/radio_ludogród/">
+                    <li>
+                        <img src="https://i.ibb.co/1RWQMG1/radio-ludogrod.png">
+                        <span>Radio Ludogród</span>
+                    </li>  
+                </a>
+            </div>
         </ul>
     </div>
     </main>
