--- a/radio/radio_ludogród/index.html
+++ b/radio/radio_ludogród/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sigma Radio - Fangea i inne kontynenty</title>
+    <title>Radio Ludogród - Fangea i inne kontynenty</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -21,16 +21,17 @@
     </header>
     <main class="radio-player-container">
     <div id="radio-player">
-    <img id="radio-logo" src="https://i.ibb.co/N2PRMdJ/sigma-radioo.png">
+    <img id="radio-logo" src="https://i.ibb.co/5v1qTqW/radio-pregolau.png">
     <div id="radio-data">
         <div id="radio-data-text">
-
-            <h1>Sigma Radio</h1>
+            <div id="radio-name-container">
+                <h1>Radio Ludogród⠀⠀⠀</h1>
+            </div>
             <ul>
-                <li>Electro</li>
+                <li>Sraczucha</li>
                 <li>Język Polski</li>
             </ul>
-            <span>- Mascarpone - Suicide<br> - Gress - VLST<br> - Seekae - Test & Recognise</span>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
         </div>
         <div id="radio-player-settings">
             <button onclick="toggleAudio()" id="toggle-button" class="play">
@@ -60,8 +61,13 @@
       </a>
     </main>
     <script>
+
+        let radio_station_name = document.querySelector(".radio-player-container #radio-player #radio-data #radio-data-text h1").innerHTML;
+        radio_station_name = `${radio_station_name} ${radio_station_name} ${radio_station_name} ${radio_station_name} ${radio_station_name} ${radio_station_name}`;
+        document.querySelector(".radio-player-container #radio-player #radio-data #radio-data-text h1").innerHTML = radio_station_name;
+        console.log(radio_station_name);
         
-        var audio = new Audio("https://www.googleapis.com/drive/v3/files/1YGA6b-CKEBDbab4NZJee0C0vjWfhoOAu?alt=media&key=AIzaSyCbfLsPxDax4v_XY5AnZ30Ivk7Pv3Z6dU0");
+        var audio = new Audio("AUDIO");
         var toggleButton = document.getElementById("toggle-button");
         var initialVolume = 0.5;
         var audioInitialized = false;
