--- a/radio/radio_ludogród/index.html
+++ b/radio/radio_ludogród/index.html
@@ -28,7 +28,8 @@
                 <h1>Radio Ludogród⠀⠀⠀</h1>
             </div>
             <ul>
-                <li>Sraczucha</li>
+                <li>Pop</li>
+                <li>Rock</li>
                 <li>Język Polski</li>
             </ul>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
@@ -67,7 +68,7 @@
         document.querySelector(".radio-player-container #radio-player #radio-data #radio-data-text h1").innerHTML = radio_station_name;
         console.log(radio_station_name);
         
-        var audio = new Audio("AUDIO");
+        var audio = new Audio("https://www.googleapis.com/drive/v3/files/1Eh1a8UY2IFbqJeYkg3o9TurwgJ5cCci4?alt=media&key=AIzaSyD76lmULeKKVQ3IcgTOTrozZzjnIaeRe00");
         var toggleButton = document.getElementById("toggle-button");
         var initialVolume = 0.5;
         var audioInitialized = false;
