--- a/radio/radio_ludogród/index.html
+++ b/radio/radio_ludogród/index.html
@@ -32,7 +32,7 @@
                 <li>Rock</li>
                 <li>Język Polski</li>
             </ul>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
+            <span>- ABBA - Lay All Your Love On Me<br>- Katy Perry - Roar<br>- Tom Odell - Another Love</span>
         </div>
         <div id="radio-player-settings">
             <button onclick="toggleAudio()" id="toggle-button" class="play">
