--- a/radio/willington_non_stop_rock/index.html
+++ b/radio/willington_non_stop_rock/index.html
@@ -31,7 +31,7 @@
                 <li>Rock</li>
                 <li>Język Angielski</li>
             </ul>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
+            <span>- Warren Zevon - Roland the Headless Thompson Gunner<br>- Jefferson Airplane - Somebody to Love<br>- Nirvana - Smells Like Teen Spirit</span>
         </div>
         <div id="radio-player-settings">
             <button onclick="toggleAudio()" id="toggle-button" class="play">
@@ -67,7 +67,7 @@
         document.querySelector(".radio-player-container #radio-player #radio-data #radio-data-text h1").innerHTML = radio_station_name;
         console.log(radio_station_name);
         
-        var audio = new Audio("AUDIO");
+        var audio = new Audio("https://www.googleapis.com/drive/v3/files/1mKvorGOBInZ8ybkDTy3XPARFAAHWEwmT?alt=media&key=AIzaSyD76lmULeKKVQ3IcgTOTrozZzjnIaeRe00");
         var toggleButton = document.getElementById("toggle-button");
         var initialVolume = 0.5;
         var audioInitialized = false;
