--- a/radio/rockford_times_fm/index.html
+++ b/radio/rockford_times_fm/index.html
@@ -21,17 +21,17 @@
     </header>
     <main class="radio-player-container">
     <div id="radio-player">
-    <img id="radio-logo" src="https://i.ibb.co/fXg1RZP/image.png">
+    <img id="radio-logo" src="https://i.ibb.co/gwPTQ65/rokford-czasy.webp">
     <div id="radio-data">
         <div id="radio-data-text">
             <div id="radio-name-container">
-                <h1>Willington Non-Stop Rock⠀⠀⠀</h1>
+                <h1>Rockford Times FM⠀⠀⠀</h1>
             </div>
             <ul>
-                <li>Rock</li>
+                <li>Informacje</li>
                 <li>Język Angielski</li>
             </ul>
-            <span>- Warren Zevon - Roland the Headless Thompson Gunner<br>- Jefferson Airplane - Somebody to Love<br>- Nirvana - Smells Like Teen Spirit</span>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
         </div>
         <div id="radio-player-settings">
             <button onclick="toggleAudio()" id="toggle-button" class="play">
