--- a/radio/rockford_times_fm/index.html
+++ b/radio/rockford_times_fm/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Willington Non-Stop Rock - Fangea i inne kontynenty</title>
+    <title>Rockford Times FM - Fangea i inne kontynenty</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
