--- a/radio/index.html
+++ b/radio/index.html
@@ -95,6 +95,18 @@
                 </a>
             </div>
             <div id="Sudfangei">
+                <a href="https://grumqy.github.io/fangea/radio/rockford_times_fm/">
+                    <li>
+                        <img src="https://i.ibb.co/gwPTQ65/rokford-czasy.webp">
+                        <span>Rockford Times FM</span>
+                    </li>  
+                </a>
+                <a href="https://grumqy.github.io/fangea/radio/rockford_times_2_fm/">
+                    <li>
+                        <img src="https://i.ibb.co/smhWqMZ/rokford-czasy2.webp">
+                        <span>Rockford Times 2 FM</span>
+                    </li>  
+                </a>
                 <a href="https://grumqy.github.io/fangea/radio/wild_west_radio/">
                     <li>
                         <img src="https://i.ibb.co/55Y2NLy/wildwestradio.png">
