--- a/wiki/disco_babushka/index.html
+++ b/wiki/disco_babushka/index.html
@@ -47,7 +47,7 @@
                 <tbody>
                     <tr class="center">
                         <td colspan="2">
-                            <img src="https://i.ibb.co/qpC2NqJ/obraz-2024-04-21-142238172.png" />
+                            <img data-description="Joanna „Disco Babushka” Świtek" src="https://i.ibb.co/qpC2NqJ/obraz-2024-04-21-142238172.png" />
                         </td>
                     </tr>
                     <tr>
