--- a/wiki/cartland/index.html
+++ b/wiki/cartland/index.html
@@ -51,7 +51,7 @@
                                 <tbody>
                                     <tr>
                                         <td style="width: 60%; vertical-align: middle">
-                                            <img src="https://i.ibb.co/0Jb1MMt/obraz-2024-04-21-010640252.png" />
+                                            <img data-description="Logo" src="https://i.ibb.co/0Jb1MMt/obraz-2024-04-21-010640252.png" />
                                         </td>
                                     </tr>
                                 </tbody>
@@ -100,7 +100,7 @@
             </p>
             <h2>Zakłady produkcyjne i logistyka</h2>
             <figure class="right" style="width: 200px">
-                <img src="https://i.ibb.co/rZt95GP/obraz-2024-04-21-154302119.png" />
+                <img data-description="Pierwsze wydanie gazetki Cartland" src="https://i.ibb.co/rZt95GP/obraz-2024-04-21-154302119.png" />
                 <figcaption>
                     Pierwsze wydanie gazetki Cartland
                 </figcaption>
