--- a/wiki/cartland/index.html
+++ b/wiki/cartland/index.html
@@ -60,11 +60,11 @@
                     </tr>
                     <tr>
                         <td colspan="2">
-                            <img src="https://i.ibb.co/syMJDYS/obraz-2024-04-21-011526519.png" />
+                            <img data-description="Statua Cartland w Willington, w pobliżu budowanej placówki" src="https://i.ibb.co/syMJDYS/obraz-2024-04-21-011526519.png" />
                         </td>
                     </tr>
                     <tr class="center">
-                        <td colspan="2">Statua Cartland w Willington, w pobliżu budowanej placówki.</td>
+                        <td colspan="2">Statua Cartland w Willington, w pobliżu budowanej placówki</td>
                     </tr>
                     <tr>
                         <th>Państwo</th>
