--- a/wiki/montecydja/index.html
+++ b/wiki/montecydja/index.html
@@ -51,10 +51,10 @@
                                 <tbody>
                                     <tr>
                                         <td style="width: 60%; vertical-align: middle">
-                                            <img src="https://i.ibb.co/Fhvtg3R/montecydja-flaga.png" />
+                                            <img data-description="Flaga Konfederacji Montecydyjskiej" src="https://i.ibb.co/Fhvtg3R/montecydja-flaga.png" />
                                         </td>
                                         <td>
-                                            <img src="https://i.ibb.co/2MMzw4Z/montecydja-godlo.png" />
+                                            <img data-description="Godło Konfederacji Montecydyjskiej" src="https://i.ibb.co/2MMzw4Z/montecydja-godlo.png" />
                                         </td>
                                     </tr>
                                     <tr class="center">
@@ -74,7 +74,7 @@
                     </tr>
                     <tr>
                         <td colspan="2">
-                            <img src="https://i.ibb.co/DLTKGtS/montecydja-mapa.png" />
+                            <img data-description="Mapa" src="https://i.ibb.co/DLTKGtS/montecydja-mapa.png" />
                         </td>
                     </tr>
                     <tr>
@@ -151,7 +151,7 @@
                     </tr>
                     <tr>
                         <td colspan="2">
-                            <img src="https://i.ibb.co/KXDH37k/montecydja-tablicarejestracyjna.png" />
+                            <img data-description="Wzór tablicy rejestracyjnej" src="https://i.ibb.co/KXDH37k/montecydja-tablicarejestracyjna.png" />
                         </td>
                     </tr>
                     <tr class="center">
