--- a/wiki/nadmorze/index.html
+++ b/wiki/nadmorze/index.html
@@ -51,10 +51,10 @@
                                 <tbody>
                                     <tr>
                                         <td style="width: 60%; vertical-align: middle">
-                                            <img src="https://i.ibb.co/172NNM4/rnflaga.png" />
+                                            <img data-description="Flaga Wielkiej Republiki Nadmorskiej" src="https://i.ibb.co/172NNM4/rnflaga.png" />
                                         </td>
                                         <td>
-                                            <img src="https://i.ibb.co/r6Yg2G0/image-2.png" />
+                                            <img data-description="Godło Wielkiej Republiki Nadmorskiej" src="https://i.ibb.co/r6Yg2G0/image-2.png" />
                                         </td>
                                     </tr>
                                     <tr class="center">
@@ -74,7 +74,7 @@
                     </tr>
                     <tr>
                         <td colspan="2">
-                            <img src="https://i.ibb.co/m8bWLKb/wera.png" />
+                            <img data-description="Mapa" src="https://i.ibb.co/m8bWLKb/wera.png" />
                         </td>
                     </tr>
                     <tr>
@@ -151,7 +151,7 @@
                     </tr>
                     <tr>
                         <td colspan="2">
-                            <img src="https://i.ibb.co/njTRd9h/obraz-2024-05-05-151359085.png" />
+                            <img data-description="Wzór tablicy rejestracyjnej" src="https://i.ibb.co/njTRd9h/obraz-2024-05-05-151359085.png" />
                         </td>
                     </tr>
                     <tr class="center">
