--- a/wiki/pampersia/index.html
+++ b/wiki/pampersia/index.html
@@ -51,10 +51,10 @@
                                 <tbody>
                                     <tr>
                                         <td style="width: 60%; vertical-align: middle">
-                                            <img src="https://i.ibb.co/bJFhJjH/pampersia.png" />
+                                            <img data-description="Flaga Rzeczypospolitej Pampersii" src="https://i.ibb.co/bJFhJjH/pampersia.png" />
                                         </td>
                                         <td>
-                                            <img src="https://i.ibb.co/vXRR6xW/pampersiaherb.png" />
+                                            <img data-description="Godło Rzeczypospolitej Pampersii" src="https://i.ibb.co/vXRR6xW/pampersiaherb.png" />
                                         </td>
                                     </tr>
                                     <tr class="center">
@@ -74,7 +74,7 @@
                     </tr>
                     <tr>
                         <td colspan="2">
-                            <img src="https://i.ibb.co/GRLhNYf/pampersia-mapa.png" />
+                            <img data-description="Mapa" src="https://i.ibb.co/GRLhNYf/pampersia-mapa.png" />
                         </td>
                     </tr>
                     <tr>
@@ -155,7 +155,7 @@
                     </tr>
                     <tr>
                         <td colspan="2">
-                            <img src="https://i.ibb.co/b5TYYpX/pampersiaplate.png" />
+                            <img data-description="Wzór tablicy rejestracyjnej" src="https://i.ibb.co/b5TYYpX/pampersiaplate.png" />
                         </td>
                     </tr>
                     <tr class="center">
