--- a/radio/rockford_times_fm/index.html
+++ b/radio/rockford_times_fm/index.html
@@ -67,7 +67,7 @@
         document.querySelector(".radio-player-container #radio-player #radio-data #radio-data-text h1").innerHTML = radio_station_name;
         console.log(radio_station_name);
         
-        var audio = new Audio("https://www.googleapis.com/drive/v3/files/1mKvorGOBInZ8ybkDTy3XPARFAAHWEwmT?alt=media&key=AIzaSyD76lmULeKKVQ3IcgTOTrozZzjnIaeRe00");
+        var audio = new Audio("AUDIO");
         var toggleButton = document.getElementById("toggle-button");
         var initialVolume = 0.5;
         var audioInitialized = false;
