--- a/radio/index.html
+++ b/radio/index.html
@@ -121,10 +121,28 @@
                 </a>
             </div>
             <div id="Montecydji">
+                <a href="https://grumqy.github.io/fangea/radio/radio_kolencydam/">
+                    <li>
+                        <img src="https://i.ibb.co/rfvbSJS/1.png">
+                        <span>Radio Kolencydam</span>
+                    </li>  
+                </a>
+                <a href="https://grumqy.github.io/fangea/radio/plus_fm/">
+                    <li>
+                        <img src="https://i.ibb.co/JcdW21f/2.png">
+                        <span>Plus FM</span>
+                    </li>  
+                </a>
                 <a href="https://grumqy.github.io/fangea/radio/mega_music/">
                     <li>
                         <img src="https://i.ibb.co/d6rqvNT/mega-music.png">
                         <span>Mega Music</span>
+                    </li>  
+                </a>
+                <a href="https://grumqy.github.io/fangea/radio/hejt_park/">
+                    <li>
+                        <img src="https://i.ibb.co/0r8mhgx/3.png">
+                        <span>Hejt Park</span>
                     </li>  
                 </a>
                 <a href="https://grumqy.github.io/fangea/radio/pop_24/">
