--- a/radio/plus_fm/index.html
+++ b/radio/plus_fm/index.html
@@ -28,7 +28,8 @@
                 <h1>Plus FM⠀⠀⠀</h1>
             </div>
             <ul>
-                <li>Sraczucha</li>
+                <li>Hip-Hop</li>
+                <li>Breakbeat</li>
                 <li>Język Polski</li>
             </ul>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
