--- a/radio/radio_kolencydam/index.html
+++ b/radio/radio_kolencydam/index.html
@@ -28,7 +28,7 @@
                 <h1>Radio Kolencydam⠀⠀⠀</h1>
             </div>
             <ul>
-                <li>Sraczucha</li>
+                <li>Electro</li>
                 <li>Język Niemiecki</li>
             </ul>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
