--- a/radio/index.html
+++ b/radio/index.html
@@ -161,10 +161,10 @@
                 </a>
             </div>
             <div id="Pieczarii">
-                <a href="https://grumqy.github.io/fangea/radio/pieczar_radio/">
+                <a href="https://grumqy.github.io/fangea/radio/radio_pieczarków/">
                     <li>
-                        <img src="https://i.ibb.co/mJqCmL1/pieczar-radio.png">
-                        <span>Pieczar Radio</span>
+                        <img src="https://i.ibb.co/FzsNd3f/radio-pieczarkow.png">
+                        <span>Radio Pieczarków</span>
                     </li>  
                 </a>
             </div>
