--- a/radio/radio_pieczarków/index.html
+++ b/radio/radio_pieczarków/index.html
@@ -28,7 +28,7 @@
                 <h1>Radio Pieczarków⠀⠀⠀</h1>
             </div>
             <ul>
-                <li>Sraczucha</li>
+                <li>Opera</li>
                 <li>Język Polski</li>
             </ul>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
