--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div style=" width: 100%; max-width: 1600px; z-index: -1; height: 100px; border-radius: 200px; background-color: rgba(255, 255, 255, 0.15); position: absolute; top: 250px;right: calc(50% - 800px); filter: blur(125px);"></div>
         </div>
         <div style="width: 100%; max-width: 500px; z-index: -1; height: 400px;  background-position: center; background-size: contain;  background-repeat: no-repeat; background-image: url('https://grumqy.github.io/fangea/local/logo.svg'); position: absolute; top: 0 ;right: 50%; transform: translate(50%); opacity: 0.1;"></div>
-        <h2 style="font-size: 1rem; font-weight: 600; color: #bbb; text-align: center; max-width: 420px; padding: 0 10px; margin: 0 auto;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</h2>
+        <h2 style="font-size: 1rem; font-weight: 600; color: #bbb; text-align: center; max-width: 420px; padding: 0 10px; margin: 0 auto;">Realistyczny serwer roleplay w KoGaMa, gdzie zaawansowana gospodarka i utalentowana społeczność tworzą autentyczne i angażujące doświadczenie.</h2>
     </div>
 <div style="max-width: 100vw; overflow: hidden;">
     <div class="article-tile-row" style=" display: flex; flex-direction: row; margin: auto; max-width: 2800px; justify-content: center; margin-top: 5rem;">
