--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             </div>
         </a>
     </div>
-    <div class="article-tile-row" style=" display: flex; flex-direction: row; margin: auto; max-width: 2800px; justify-content: center; margin-top: 1rem;">
+    <div class="article-tile-row" style=" display: flex; flex-direction: row; margin: auto; max-width: 2800px; justify-content: center; margin-top: 1rem; padding-bottom: 1.75rem">
         <a href="https://grumqy.github.io/fangea/wiki/nadmorze/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
