--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         <p style="float: left; margin: 0; color: rgba(255, 255, 255, 0.75);">Poszerz swoją wiedzę o świecie Fangei</p>
                     </div>
                     <div style="width: fit-content; height: fit-content; float: left;">
-                        <a style="float: right;" href="https://grumqy.github.io/fangea/wiki/disco_babushka/" class="button-href wiki"><i class="fa-solid fa-book"></i>Przejrzyj Wiki</a>
+                        <a style="float: right;" href="https://grumqy.github.io/fangea/wiki/" class="button-href wiki"><i class="fa-solid fa-book"></i>Przejrzyj Wiki</a>
                     </div>
                 </div>
                 <div style="background-image: url(https://i.ibb.co/7CBKbZQ/image.png); background-size: cover; background-position-x: left; background-position-y: top; background-repeat: no-repeat; width: 450px; height: 230px; border-bottom-left-radius: 1rem; position: absolute; top: 0; right: 0; opacity: 0.8; filter: blur(2px); z-index: -1;"></div>
