--- a/wiki/mirosław_długoszyjny/index.html
+++ b/wiki/mirosław_długoszyjny/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Joanna „Disco Babushka” Świtek - Fangea i inne kontynenty</title>
+    <title>Mirosław Długoszyjny - Fangea i inne kontynenty</title>
         <meta property="og:title" content="„Disco Babushka” Świtek">
     <meta name="twitter:title" content="„Disco Babushka” Świtek">
     <meta name="description" content="Była prezydent Pieczarii (ur. 1926 w wiosce Jandyna, zm. 2023 w Pieczarkowie), założycielka firmy DiscoBabushkaInternaszionalSklepiki oraz celebrytka znana ze swych kas fiskalnych. Do dziś niewiele informacji zachowało się z dzieciństwa i młodości Joanny Świtek, głównie ze względu na brak poruszania tego tematu przez Disco Babushkę za życia oraz ze względu na zagubienie źródeł w czasie przeprowadzki rodziny do Iznotii.">
@@ -96,7 +96,7 @@
             <p>
                 Przez cały czas Długoszyjny miał schowaną kamerkę, dzięki której całość była rejestrowana, nagranie zostało opublikowane chwilę po jego śmierci.
             </p>
-            <h1>Oficjalna wersja Iznotii</h1>
+            <h2>Oficjalna wersja Iznotii</h2>
             <p>
                 Władze Iznotii wydały jeszcze dnia popełnienia zbrodni oświadczenie twierdzące, iż wydarzenie było wyreżyserowane, nie podając dodatkowych informacji.
             </p>
