--- a/wiki/port_złotice/index.html
+++ b/wiki/port_złotice/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Joanna „Disco Babushka” Świtek - Fangea i inne kontynenty</title>
+    <title>Port Złotice - Fangea i inne kontynenty</title>
         <meta property="og:title" content="Port Złotice">
     <meta name="twitter:title" content="Port Złotice">
     <meta name="description" content="Miasto na północy Pieczarii. Drugie najstarsze miasto w kraju i stolica województwa Złotickiego. Miasto leży jednocześnie nad rzeką Wodnicą i kanałem Katuckim. Jest znane z najmniejszego portu w kraju i swej zabudowy, popularnie zwanej kamienicami typu Złotickiego, można je też spotkać w Kterowie, Porcie Wielcec czy Rinie. Pierwsze ślady osadnictwa na terenie dzisiejszych Złotic pochodzą z około 1000 roku. Zabudowa wtedy była głównie drewniana, a domy były zwarte i jednopiętrowe, z dachem ustawionym szczytowo. Port Złotice powstał jednak 1 września 2022 roku, gdy po zabudowaniach w okolicy pozostały jedynie ukryte pod ziemią fundamenty. Pierwotnie miasto było budowane na wzór Pieczarkowa, z tą różnicą, że ulice były wytyczane szersze. Zmieniło się to pod koniec 2022 roku, kiedy to zabudowa zaczęła się upodabniać to tradycyjnej architektury regionu.">
