--- a/wiki/mirosław_długoszyjny/index.html
+++ b/wiki/mirosław_długoszyjny/index.html
@@ -51,9 +51,7 @@
                         </td>
                     </tr>
                     <tr class="center">
-                        <th colspan="2">
-                            zdjęcie Mirosława Długoszyjnego wykonane z ukrycia
-                        </th>
+                        <td colspan="2">zdjęcie Mirosława Długoszyjnego wykonane z ukrycia</td>
                     </tr>
                     <tr>
                         <th>Pełne imię i nazwisko</th>
