--- a/wiki/port_złotice/index.html
+++ b/wiki/port_złotice/index.html
@@ -133,7 +133,7 @@
             <figure class="left" style="width: 200px">
                 <img src="https://i.ibb.co/dkVFMqp/image.png" />
                 <figcaption>
-                    makieta przedstawiająca osadę na terenie dzisiejszego Portu Złotice
+                    Makieta przedstawiająca osadę na terenie dzisiejszego Portu Złotice
                 </figcaption>
             </figure>
             <p>
