--- a/wiki/port_złotice/index.html
+++ b/wiki/port_złotice/index.html
@@ -133,7 +133,10 @@
                 </figcaption>
             </figure>
             <p>
-                Port Złotice powstał jednak 1 września 2022 roku, gdy po zabudowaniach w okolicy pozostały jedynie ukryte pod ziemią fundamenty. Pierwotnie miasto było budowane na wzór Pieczarkowa, z tą różnicą, że ulice były wytyczane szersze. Zmieniło się to pod koniec 2022 roku, kiedy to zabudowa zaczęła się upodabniać to tradycyjnej architektury regionu. W czasie wojny Ebengradzko-Pieczarskiej o miejscowość stoczyła się bitwa, w trakcie której połączone siły Ebengradu, WRN, Pampersii i USF przeprowadziły szturm i desant na miasto, które szybko zostało zajęte. W czasie bitwy około 20% miasta zostało zburzone, jednak mniejsze uszkodzenia (głównie dziury w dachach) dotknęły prawie całego centrum.
+                Port Złotice powstał jednak 1 września 2022 roku, gdy po zabudowaniach w okolicy pozostały jedynie ukryte pod ziemią fundamenty. Pierwotnie miasto było budowane na wzór Pieczarkowa, z tą różnicą, że ulice były wytyczane szersze. Zmieniło się to pod koniec 2022 roku, kiedy to zabudowa zaczęła się upodabniać to tradycyjnej architektury regionu. 
+            </p>
+            <p>
+                W czasie wojny Ebengradzko-Pieczarskiej o miejscowość stoczyła się bitwa, w trakcie której połączone siły Ebengradu, WRN, Pampersii i USF przeprowadziły szturm i desant na miasto, które szybko zostało zajęte. W czasie bitwy około 20% miasta zostało zburzone, jednak mniejsze uszkodzenia (głównie dziury w dachach) dotknęły prawie całego centrum.
             </p>
             <h2>Odbudowa</h2>
             <figure class="left" style="width: 200px">
