--- a/wiki/port_złotice/index.html
+++ b/wiki/port_złotice/index.html
@@ -120,7 +120,10 @@
                 </figcaption>
             </figure>
             <p>
-                Port Złotice (niem. Hafengoldberg; katuc. Gielberentt; łac. Portaurum heb. זהב נמל ros. Гавань Злотице) – gminne miasto wojewódzkie leżące w województwie Złotickim, w powiecie Złotickim. Leży jednocześnie nad rzeką Wodnicą i kanałem Katuckim. Jest znane z najmniejszego portu w kraju i swej zabudowy, popularnie zwanej kamienicami typu Złotickiego, można je też spotkać w Kterowie, Porcie Wielcec czy Rinie. Miasto jest drugim najstarszym miastem Pieczarek i jednym z najbardziej popularnych na Fangei. Aktualnie mieszka tam 10 293 osób. (stan na 2 czerwca 2024 roku)
+                Port Złotice (niem. Hafengoldberg; katuc. Gielberentt; łac. Portaurum heb. זהב נמל ros. Гавань Злотице) –<br>gminne miasto wojewódzkie leżące w województwie Złotickim, w powiecie Złotickim. Leży jednocześnie nad rzeką Wodnicą i kanałem Katuckim. Jest znane z najmniejszego portu w kraju i swej zabudowy, popularnie zwanej kamienicami typu Złotickiego, można je też spotkać w Kterowie, Porcie Wielcec czy Rinie.
+            </p>
+            <p>
+                Miasto jest drugim najstarszym miastem Pieczarek i jednym z najbardziej popularnych na Fangei. Aktualnie mieszka tam około 10 293 osób.
             </p>
             <h1>Historia</h1>
             <p>
