--- a/wiki/port_złotice/index.html
+++ b/wiki/port_złotice/index.html
@@ -85,27 +85,27 @@
                 </tr>
                 <tr>
                     <th>Data założenia</th>
-                    <td>Sraczucha</td>
+                    <td>1 września 2022</td>
                 </tr>
                 <tr>
                     <th>Prawa miejskie</th>
-                    <td>Sraczucha</td>
+                    <td>1 września 2022</td>
                 </tr>
                 <tr>
                     <th>Prezydent</th>
-                    <td>Sraczucha</td>
+                    <td>XYZ</td>
                 </tr>
                 <tr>
                     <th>Liczba ludności</th>
-                    <td>Sraczucha</td>
+                    <td>10 293 mieszkańców</td>
                 </tr>
                 <tr>
                     <th>Kod pocztowy</th>
-                    <td>Sraczucha</td>
+                    <td>02-001</td>
                 </tr>
                 <tr>
                     <th>Tablice rejestracyjne</th>
-                    <td>Sraczucha</td>
+                    <td>PZ</td>
                 </tr>
             </tbody>
         </table>
