--- a/wiki/port_złotice/index.html
+++ b/wiki/port_złotice/index.html
@@ -47,7 +47,7 @@
             <tbody>
                 <tr class="center">
                     <th colspan="2">
-                        miasto na prawach powiatu
+                        miasto i gmina
                     </th>
                 </tr>
                 <tr>
