--- a/wiki/port_złotice/index.html
+++ b/wiki/port_złotice/index.html
@@ -92,7 +92,7 @@
                     <td>1 września 2022</td>
                 </tr>
                 <tr>
-                    <th>Prezydent</th>
+                    <th>Burmistrz</th>
                     <td>XYZ</td>
                 </tr>
                 <tr>
